<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:focusableInTouchMode="true"
    tools:context="com.hado.brainchallenge.ui.login.LoginActivity">

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/ic_perm_identity_black_24px"
        android:drawablePadding="@dimen/login_drawable_padding_left"
        android:ems="10"
        android:hint="@string/login_username_hint"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/login_edt_padding_left"
        app:layout_constraintBottom_toTopOf="@+id/edt_password"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintStart_toStartOf="@+id/edt_password" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/ic_lock_outline_black_24px"
        android:drawablePadding="@dimen/login_drawable_padding_left"
        android:ems="10"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/login_edt_padding_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="234dp" />


    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="@color/colorPrimary"
        android:text="@string/login_sign_in"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_or"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        tools:layout_editor_absoluteX="183dp" />

    <Button
        android:id="@+id/btn_login_social"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/login_background_button_login_social"
        android:text="@string/login_sign_in_social"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/login_logo_application"
        app:layout_constraintBottom_toTopOf="@+id/edt_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="117dp" />
</android.support.constraint.ConstraintLayout>
